--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<div id="root"></div>
+<html>
+  <head>
+    <title>gemanepa - React + Redux Counter</title>
+  </head>
+  <body id="root"></body>
+</html>
