2 files modified, 1 added

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
   <head>
     <title>gemanepa - React + Redux Counter</title>
   </head>
-  <body id="root"></body>
+  <body>
+    <main id="root"></main>
+  </body>
 </html>
